--- a/package.json
+++ b/package.json
@@ -126,9 +126,10 @@
     "gulp-livereload": "^1.2.0",
     "gulp-load-plugins": "^0.5.0",
     "gulp-ruby-sass": "^0.7.1",
+    "gulp-spritesmith": "0.0.2",
     "gulp-template": "^1.0.0",
     "gulp-uglify": "^1.0.0",
-    "gulp.spritesmith": "^3.8.2",
+    "gulp.spritesmith": "^4.0.0",
     "jshint-stylish": "^0.4.0"
   },
   "engines": {
